# astra-search-demo

./: .env.example  .gitignore  API.md  README.md  SEARCH_API.md  SETUP.md  TROUBLESHOOTING.md  UI.md  pyproject.toml  pytest.ini  requirements.txt  setup.sh
app/: __init__.py  config.py  database.py  main.py  models.py
app/routers/: __init__.py  books.py  health.py  items.py  movies.py
app/static/: index.html
app/static/css/: styles.css
app/static/js/: api.js  app.js  partialLoader.js
app/static/js/components/: addBookForm.js  bookDetailsModal.js  comparisonView.js  filterBuilder.js  searchResults.js
app/static/partials/: add-book-modal.html  footer.html  header.html  results-section.html  search-modes-tabs.html
app/static/partials/panels/: comparison-panel.html  filter-panel.html  hybrid-panel.html  lexical-panel.html  semantic-panel.html
data/: quickstart_dataset.json
scripts/: db_connect.py  db_create_collection.py  db_hydrate_collection.py  script_utils.py
tests/: __init__.py  conftest.py  test_api.py
